trying to resolve weird background behaviour on ios

--- a/css/main.scss
+++ b/css/main.scss
@@ -14,6 +14,7 @@ html, body {
   height:100%;
   font-family: sans-serif;
   margin:0;
+  overscroll-behavior-y: none;
 }
 
 ul {
@@ -34,7 +35,6 @@ body::before{
   height: 100%;
   background: url(../img/bg-min.jpg) no-repeat;
   background-size: cover;
-  background-position: fixed;
 }
 
 h3 {
